ecmascript/parser/tests/typescript-errors/tsc/dynamicImport/importCallExpressionIncorrect2/input.ts.stderr
error: Expected (, got {
 --> $DIR/tests/typescript-errors/tsc/dynamicImport/importCallExpressionIncorrect2/input.ts:7:16
  |
7 | var x = import { foo } from './0';
  |                ^

